--- a/hero.css
+++ b/hero.css
@@ -40,11 +40,15 @@
     width: 7em;
     height: 2em;
     background-color: #D63D3D;
-    color: white;
     font-size: 1.5rem;
     border: none;
     border-radius: 2em;
-    font-weight: 500;
+    text-decoration: none;
+}
+
+.hero-contact-us-button-text {
+    color: white;
+    text-decoration: none;
 }
 
 .hero-down-arrow {
