Fixed texture ratio and arrow down animation

--- a/navbar.css
+++ b/navbar.css
@@ -74,8 +74,10 @@ h1 {
 
 .hamburger-dropdown-texture-image {
     position: absolute;
-    top: -21.5em;
-    opacity: 80%;
+    object-fit: cover;
+    height: 100%;
+    width: 100%;
+    opacity: 0.5;
     z-index: -1;
 }
 
