--- a/hero.css
+++ b/hero.css
@@ -22,7 +22,7 @@
     position: absolute;
     width: 100%;
     height: 30em;
-    margin-top: -20em;
+    margin-top: -10em;
     padding: 2em;
     justify-content: space-evenly;
 
@@ -32,7 +32,7 @@
     font-family: 'Bagel Fat One';
     color: #FF9DEA;
     font-size: 3.8rem;
-    line-height: 3.9rem;
+    line-height: 5rem;
 }
 
 .hero-contact-us-button {
@@ -55,8 +55,19 @@
     position: absolute;
     top: 80%;
     scale: 0.5;
+    opacity: 0;
+    margin-top: 3.5em;
+    animation-name: pulsating;
+    animation-duration: 3s;
+    animation-timing-function: ease-in-out;
+    animation-iteration-count: infinite;
 }
 
 .dropdown-link {
     text-decoration: none;
+}
+
+@keyframes pulsating {
+    10% { opacity: 0;}
+    20% { opacity: 0.5;}
 }
