--- a/events.css
+++ b/events.css
@@ -1,15 +1,34 @@
 .event-section {
-    background-color:#020202;
-    color:#F8F8F8;
+    background-color: #020202;
+    color: #F8F8F8;
+    position: relative;
     padding: 1em;
     display: flex;
     flex-direction: column;
     align-items: center;
     gap: 2em;
+    z-index: 0;
+}
+
+/* För bakgrundsbild */
+.event-section::before {
+    content: "";
+    position: absolute;
+    top: 0;
+    left: 0;
+    right: 0;
+    bottom: 9rem;
+    background-image: url(images/bakgrundsbild1.jpeg);
+    background-size: cover; 
+    background-position: center; 
+    background-repeat: no-repeat; 
+    opacity: 0.3; 
+    z-index: -1; 
 }
 
 .event-section h2 {
-    font-family:'Bagel Fat One';font-size: 54px; /*Ändra?*/
+    font-family: 'Bagel Fat One';
+    font-size: 54px;
     margin-bottom: 0.5em;
 }
 
@@ -20,24 +39,31 @@
     display: flex;
     flex-direction: row;
     align-items: center;
+    cursor: pointer;
+}
 
+.event-card:hover {
+    background-color: #FF9DEA;
 }
 
 .event-content {
-    font-family: 'Afacad Flux';font-size: 18px;
+    font-family: 'Afacad Flux';
+    font-size: 18px;
     text-align: left;
     width: 50%;
     padding: 1em;
 }
 
+    /* titta på detta*/
 .event-image {
     width: 50%;
-    max-height: 10em;
+    height: 10em;
+    object-fit: cover;
 }
 
 .event-quote {
-    font-family: 'Afacad Flux';font-size: 18px;
-    padding: 3rem;
+    font-family: 'Afacad Flux';
+    font-size: 18px;
+    padding: 3em;
     text-align: center;
 }
-
