--- a/contact.css
+++ b/contact.css
@@ -1,13 +1,18 @@
 .contact-section {
-    background-color: black;
+    background-image: 
+        linear-gradient(rgba(92, 92, 92, 0.2), rgba(92, 92, 92, 0.2)),
+        url(images/contact.jpeg);
+    background-size: cover;
+    background-position: center;
+    position: relative;
     padding: 1em;
 }
 
 .title-contact {
     font-family: 'Bagel Fat One', sans-serif;
-    font-size: 54px;
+    font-size: 48px;
     text-align: center;
-    padding: 1em;
+    padding: 0.5em;
     color: #f8f8f8;
 }
 
@@ -19,32 +24,32 @@ form {
     flex-direction: column;
     align-items: center;
     text-align: right;
-}
-
-.form-group {
-    display: flex;
-    align-items: center;
-    justify-content: space-between;
-    width: 60%;
-    margin-bottom: 1em;
+    margin-top: 1.5em;
 }
 
 label {
-    width: 80%;
+    width: 300px;
     text-align: left;
+    font-size: 18px;
+    display: block;
+    margin-bottom: 4px;
 }
 
 .text1, .text2 {
-    width: 80%;
+    width: 300px;
     padding: 10px;
-    margin: 2px 0;
+    margin: 1px 0;
     font-size: 18px;
     font-family: 'Afacad Flux', sans-serif;  
 }
 
+.text1 {
+    height: 40px;
+}
+
 .text2 {
     resize: vertical;
-    height: 120px;
+    height: 200px;
     overflow-y: auto;              
     vertical-align: top;
     line-height: 1.5;
@@ -62,10 +67,35 @@ label {
     font-family: 'Afacad Flux', sans-serif;
     font-size: 18px;
     border: none;
-    outline: none;
-    padding: 10px 32px;
-    border-radius: 100px;
+    border-radius: 2em;
     box-shadow: 0 8px 16px 0 rgba(0,0,0,0.2), 0 6px 20px 0 rgba(0,0,0,0.19);
     cursor: pointer;
-    margin-right: 10%;
+    width: 100px;
+    height: 40px;
+    padding: 8px;
+    margin: 8px 0;
+    box-sizing: border-box;
+    flex-shrink: 0;
+}
+
+footer {
+    margin-top: -7.5rem;
+    background-color: rgba(2, 2, 2, 0.8);
+    display: flex;
+    flex: 1;
+    justify-content: space-evenly;
+    align-items: center;
+    z-index: 1;
+    font-family: 'Afacad Flux', sans-serif;
+    color: #f8f8f8;
+    font-size: 12px;
+    font-weight: 100;
+    width: 100%;
+}
+
+.social-media {
+    display: flex;
+    justify-content: center;
+    gap: 15px;
+    font-size: 26px;
 }
