--- a/news.css
+++ b/news.css
@@ -5,9 +5,25 @@
     display: flex;
     flex-direction: column;
     align-items: center;
+    position: relative;
+    z-index: 0;
+}
+.news-section::before {
+    content: "";
+    position: absolute;
+    top: 0;
+    left: 0;
+    right: 0;
+    bottom: 9rem;
+    background-image: url(images/bakgrundsbild1.jpeg);
+    background-size: cover; 
+    background-position: center; 
+    background-repeat: no-repeat; 
+    opacity: 0.3; 
+    z-index: -1; 
 }
 .news-section h2 {
-    font-size: 54px;
+    font-size: 48px;
     color: #F8F8F8;
     font-family: "Bagel Fat One";
     font-weight: 400;
