--- a/events.css
+++ b/events.css
@@ -28,8 +28,9 @@
 
 .event-section h2 {
     font-family: 'Bagel Fat One';
-    font-size: 54px;
+    font-size: 48px;
     margin-bottom: 0.5em;
+    margin-top: 2rem;
 }
 
 .event-card {
