--- a/hero.css
+++ b/hero.css
@@ -1,17 +1,18 @@
 
 .hero-section {
-    object-fit: fill;
+    /* object-fit: cover; */
     display: flex;
     flex-direction: column;
     justify-content: center;
     align-items: center;
+    width: 100%;
 }
 
 .hero-image {
     object-fit: cover;
     height: 100%;
     width: 100%;
-    object-position:  -45em;
+    /* object-position:  -45em; */
     position: relative;
     z-index: -1;
 }
