--- a/navbar.css
+++ b/navbar.css
@@ -4,16 +4,17 @@ header {
     position: fixed;
     font-family: 'Afacad Flux';
     display: flex;
+    justify-content: space-between;
     align-items: center;
     padding: 2em;
     width: 100%;
-    justify-content: space-between;
     background-color: transparent;
     backdrop-filter: blur(10px);
     z-index: 10;
 }
 
 h1 {
+    min-width: 6em;
     font-weight: 300;
     color: white;
 }
@@ -97,3 +98,61 @@ h1 {
 .hamburger-menu-image:hover {
     cursor: pointer;
 }
+
+.navbar-links-desktop {
+    display: none;
+}
+
+.navbar-link {
+    color: white;
+    text-decoration: none;
+    font-weight: 300;
+
+}
+
+@media only screen and (min-width: 768px) { 
+    header {
+        display: flex;
+        justify-content: space-between;
+        width: 80%;
+    }
+
+    .hamburger-menu-button, .nav {
+        display: none;
+    }
+        
+    nav {
+        width: 100%;
+    }
+
+    .navbar-links-desktop {
+        display: inline-block;
+        width: 100%;
+    }
+
+    .navbar-link {
+        font-size: 1.6rem;
+    }
+
+    .navbar-link-list {
+        display: flex;
+        justify-content: center;
+        padding-left: 2em;
+    }
+
+    .navbar-link {
+        padding-left: 2em;
+    }
+}
+
+
+@media only screen and (min-width: 768px) and (max-width: 1200px) {
+    header {
+        width: 100%;
+    }
+}
+
+/* @media only screen and (min-width: 768px) and (max-width: 992) {
+    header {
+        width: 100%;
+    } */
