--- a/events.css
+++ b/events.css
@@ -10,7 +10,6 @@
     z-index: 0;
 }
 
-/* För bakgrundsbild */
 .event-section::before {
     content: "";
     position: absolute;
@@ -18,12 +17,14 @@
     left: 0;
     right: 0;
     bottom: 9rem;
-    background-image: url(images/bakgrundsbild1.jpeg);
-    background-size: cover; 
-    background-position: center; 
-    background-repeat: no-repeat; 
-    opacity: 0.3; 
-    z-index: -1; 
+    height: 100%;
+    min-height: 100%;
+    background-image: url(images/news-asset.png);
+    background-size: cover;
+    background-position: center;
+    background-repeat: no-repeat;
+    opacity: 0.3;
+    z-index: -1;
 }
 
 .event-section h2 {
@@ -55,7 +56,6 @@
     padding: 1em;
 }
 
-    /* titta på detta*/
 .event-image {
     width: 50%;
     height: 10em;
@@ -67,4 +67,52 @@
     font-size: 18px;
     padding: 3em;
     text-align: center;
+}
+
+@media only screen and (min-width: 1200px) {
+    .event-section {
+        height: 50em;
+        display: flex;
+        flex-direction: row;
+        justify-content: center;
+        gap: 4em;
+    }
+
+    .event-card {
+        display: flex;
+        flex-direction: column-reverse;
+        align-items: center;
+        width: 20%;
+        height: auto;
+    }
+
+    .event-section h2 {
+        position: absolute;
+        top: 2rem; /* Placera rubriken 1 rem från toppen */
+        text-align: center;
+        margin: 0;
+    }
+
+    .event-content {
+        width: 100%;
+        padding: 1em;
+        object-fit: cover;
+        font-size: 14px;
+    }
+
+    .event-image {
+        width: 100%;
+        height: 22em;
+        object-fit: cover;
+    }
+
+    .event-quote {
+        font-size: 22px;
+        position: absolute;
+        bottom: 1em;
+        width: 100%;
+        text-align: center;
+        padding: 1em;
+    }
+
 }
