--- a/news.css
+++ b/news.css
@@ -7,6 +7,8 @@
     align-items: center;
     position: relative;
     z-index: 0;
+    min-height: 780px;
+    overflow: hidden;
 }
 .news-section::before {
     content: "";
@@ -14,9 +16,11 @@
     top: 0;
     left: 0;
     right: 0;
-    bottom: 2rem;
+    bottom: 0;
     background-image: url(images/news-asset.png);
-    background-size: cover; 
+    background-size: 100% 180%;
+    transform: rotateY(180deg);
+
     background-position: center; 
     background-repeat: no-repeat; 
     opacity: 0.3; 
@@ -37,10 +41,13 @@
     height: auto;
     font-family: 'Afacad Flux';
     font-size: 18px;
+    width: clamp(200px, 100%, 600px);
 }
 .nyhets-block article {
     display: flex;
+    width: 100%;
     flex-wrap: wrap;
+    height: auto;
     padding: 1em;
     transition: background 0.3s ease-in-out;
 }
@@ -48,14 +55,25 @@
     background: #FF9DEA;
 }
 .nyhets-block figure {
-    width: 50%;
     display: flex;
+    width: 40%;
+    height: auto;
 }
 .nyhets-block figure img {
     border-radius: 10%;
+    width: 100%;
+    height: 100%;
 }
 .nyhets-block aside {
-    width: 50%;
+    display: flex;
+    flex-wrap: wrap;
+    width: 60%;
+    height: 6rem;
+    overflow: hidden;
+    padding: 0em 1em 0em;
+}
+.nyhets-block aside button {
+    display: none;
 }
 .nyhets-block summary {
     display: flex;
@@ -68,4 +86,62 @@
 .nyhets-block button {
     align-self: center;
     margin-bottom: 1rem;
+}
+.news-event-quote {
+    font-family: 'Afacad Flux';
+    font-size: 18px;
+    text-align: center;
+}
+
+@media screen and (min-width: 1200px){
+    .nyhets-block {
+        flex-direction: row;
+        position: relative;
+        width: 100%;
+        background: transparent;
+        font-size: 130%;
+    }
+    .nyhets-block article {
+        flex-direction: column;
+        align-items: center;
+        flex-wrap: nowrap;
+        position: relative;
+        height: 60vh;
+        background: #F8F8F8;
+        margin: 0em 2em 0em;
+    }
+    .nyhets-block aside {
+        display: flex;
+        flex-direction: column;
+        flex-wrap: nowrap;
+        overflow: hidden;
+        width: 90%;
+        height: auto;
+        margin: 1em 0em 1em;
+    }
+    .nyhets-block figure {
+        height: 10rem;
+    }
+    .nyhets-block summary {
+        width: 75%;
+        position: absolute;
+        bottom: 1em;
+        border-bottom: 1px solid black;
+    }
+    .nyhets-block button {
+        display: none;
+    }
+    .nyhets-block aside button {
+        display: flex;
+        align-items: center;
+        justify-content: center;
+        position: absolute;
+        bottom: -4rem;
+    }
+    .news-event-quote {
+        position: absolute;
+        bottom: 0;
+        padding-bottom: 3em;
+        font-size: 130%;
+    }
 }
