--- a/events.css
+++ b/events.css
@@ -37,7 +37,7 @@
 .event-card {
     background-color: #F8F8F8;
     color: #020202;
-    width: 100%;
+    width: 25em;
     display: flex;
     flex-direction: row;
     align-items: center;
@@ -71,11 +71,12 @@
 
 @media only screen and (min-width: 1200px) {
     .event-section {
-        height: 50em;
+        height: 55em;
         display: flex;
         flex-direction: row;
         justify-content: center;
         gap: 4em;
+        overflow: hidden;
     }
 
     .event-card {
@@ -88,7 +89,7 @@
 
     .event-section h2 {
         position: absolute;
-        top: 2rem; /* Placera rubriken 1 rem från toppen */
+        top: 2rem;
         text-align: center;
         margin: 0;
     }
@@ -114,5 +115,73 @@
         text-align: center;
         padding: 1em;
     }
-
 }
+
+@media only screen and (min-width: 768px) and (max-width: 1200px) {
+    .event-section {
+        height: 55em;
+        display: flex;
+        flex-direction: row;
+        justify-content: center;
+        gap: 4em;
+        overflow: hidden;
+    }
+
+    .event-card {
+        display: flex;
+        flex-direction: column-reverse;
+        align-items: center;
+        width: 20%;
+        height: auto;
+    }
+
+    .event-section h2 {
+        position: absolute;
+        top: 2rem;
+        text-align: center;
+        margin: 0;
+    }
+
+    .event-content {
+        width: 100%;
+        padding: 1em;
+        object-fit: cover;
+        font-size: 14px;
+    }
+
+    .event-image {
+        width: 100%;
+        height: 22em;
+        object-fit: cover;
+    }
+
+    .event-quote {
+        font-size: 22px;
+        position: absolute;
+        bottom: 1em;
+        width: 100%;
+        text-align: center;
+        padding: 1em;
+    }
+}
+
+/* @media only screen and (min-width: 768px) and (max-width: 600px) {
+
+.event-card {
+    width: 80%;
+    max-width: 400px;
+    display: flex;
+    flex-direction: row;
+}
+.event-content {
+    font-size: 18px;
+    width: 60%;
+    padding: 0.5em;
+}
+
+.event-image {
+    width: 40%;
+    height: auto;
+    object-fit: cover;
+} */
+
