--- a/news.css
+++ b/news.css
@@ -20,11 +20,11 @@
     background-image: url(images/news-asset.png);
     background-size: 100% 180%;
     transform: rotateY(180deg);
-
     background-position: center; 
     background-repeat: no-repeat; 
     opacity: 0.3; 
-    z-index: -1; 
+    z-index: -1;
+    text
 }
 .news-section h2 {
     font-size: 48px;
@@ -35,19 +35,20 @@
     margin-top: 2rem;
 }
 .nyhets-block {
-    background: #F8F8F8;
+    background: transparent;
     display: flex;
     flex-direction: column;
-    height: auto;
     font-family: 'Afacad Flux';
+    height: auto;
     font-size: 18px;
+    gap: 1em;
     width: clamp(200px, 100%, 600px);
 }
 .nyhets-block article {
     display: flex;
+    background: #F8F8F8;
     width: 100%;
     flex-wrap: wrap;
-    height: auto;
     padding: 1em;
     transition: background 0.3s ease-in-out;
 }
@@ -56,7 +57,7 @@
 }
 .nyhets-block figure {
     display: flex;
-    width: 40%;
+    width: 120px;
     height: auto;
 }
 .nyhets-block figure img {
@@ -68,7 +69,7 @@
     display: flex;
     flex-wrap: wrap;
     width: 60%;
-    height: 6rem;
+    height: 8rem;
     overflow: hidden;
     padding: 0em 1em 0em;
 }
@@ -83,23 +84,34 @@
     width: 100%;
     border-bottom: 1px solid black;
 }
-.nyhets-block button {
+.news-button-send {
     align-self: center;
-    margin-bottom: 1rem;
+    color: #f8f8f8;
+    font-size: 18px;
+    background-color: #D63D3D;
+    border: none;
+    border-radius: 2em;
+    box-shadow: 0 8px 10px 0 rgba(0,0,0,0.2), 0 6px 10px 0 rgba(0,0,0,0.19);
+    width: 120px;
+    height: 40px;
+    flex-shrink: 0;
 }
-.news-event-quote {
+.news-button-send{
+    cursor: pointer;
+}
+.news-event-quote{
     font-family: 'Afacad Flux';
     font-size: 18px;
-    text-align: center;
+    align-self: center;
 }
 
 @media screen and (min-width: 1200px){
     .nyhets-block {
         flex-direction: row;
+        justify-content: center;
         position: relative;
         width: 100%;
         background: transparent;
-        font-size: 130%;
     }
     .nyhets-block article {
         flex-direction: column;
@@ -107,41 +119,64 @@
         flex-wrap: nowrap;
         position: relative;
         height: 60vh;
+        max-height: 1200px;
         background: #F8F8F8;
-        margin: 0em 2em 0em;
+        margin: 0em 1em 0em;
+        max-width: 600px;
     }
     .nyhets-block aside {
         display: flex;
         flex-direction: column;
         flex-wrap: nowrap;
         overflow: hidden;
-        width: 90%;
+        width: 100%;
         height: auto;
-        margin: 1em 0em 1em;
+        margin-bottom: 2rem;
+    }
+    .nyhets-block aside h3 {
+        align-self: center;
     }
     .nyhets-block figure {
-        height: 10rem;
+        width: auto;
+        height: 100%;
+        max-height: 18rem;
+    }
+    .nyhets-block figure img {
+        border-radius: 10%;
+        width: 100%;
+        height: 100%;
     }
     .nyhets-block summary {
-        width: 75%;
+        width: 80%;
         position: absolute;
         bottom: 1em;
         border-bottom: 1px solid black;
     }
-    .nyhets-block button {
+    .news-button-send {
         display: none;
     }
     .nyhets-block aside button {
         display: flex;
         align-items: center;
+        align-self: center;
         justify-content: center;
         position: absolute;
         bottom: -4rem;
+        color: #f8f8f8;
+        font-size: 18px;
+        background-color: #D63D3D;
+        border: none;
+        border-radius: 2em;
+        box-shadow: 0 8px 10px 0 rgba(0,0,0,0.2), 0 6px 10px 0 rgba(0,0,0,0.19);
+        width: 120px;
+        height: 40px;
+        margin: 1em 0em 1em;
+    }
+    .nyhets-block aside button:hover {
+        cursor: pointer;
     }
     .news-event-quote {
         position: absolute;
-        bottom: 0;
-        padding-bottom: 3em;
-        font-size: 130%;
+        bottom: -12rem;
     }
 }
