--- a/footer.css
+++ b/footer.css
@@ -1,5 +1,4 @@
 footer {
-    margin-top: -7.5rem;
     background-color: rgba(2, 2, 2, 0.8);
     display: flex;
     flex: 1;
@@ -12,6 +11,9 @@ footer {
     font-weight: 100;
     width: 100%;
     height: 10em;
+    margin-top: -10em;
+    position: relative;
+    z-index: 10;
 }
 
 .social-media {
@@ -29,8 +31,23 @@ footer {
 @media only screen and (min-width: 1200px) {
 
     footer {
-        height: 16em;
-        margin-top: -16rem;
+        font-size: 16px;
+    }
+
+    .social-media {
+        gap: 15px;
+        font-size: 30px;
+    }
+
+    .our-vision {
+        display: block;
+    }
+
+}
+
+@media only screen and (min-width: 768px) and (max-width: 1200px) {
+
+    footer {
         font-size: 16px;
     }
 
