--- a/news.css
+++ b/news.css
@@ -117,8 +117,7 @@
         align-items: center;
         flex-wrap: nowrap;
         position: relative;
-        height: 60vh;
-        max-height: 1200px;
+        max-height: 500px;
         background: #F8F8F8;
         margin: 0em 1em 0em;
         max-width: 600px;
@@ -145,7 +144,7 @@
         width: 100%;
         height: 100%;
     }
-    .summary-news {
+    .nyhets-block summary {
         width: 80%;
         position: absolute;
         bottom: 1em;
@@ -176,6 +175,6 @@
     }
     .news-event-quote {
         position: absolute;
-        bottom: -12rem;
+        bottom: -8rem;
     }
 }
