--- a/events.css
+++ b/events.css
@@ -71,7 +71,7 @@
 
 @media only screen and (min-width: 1200px) {
     .event-section {
-        height: 55em;
+        height: 65em;
         display: flex;
         flex-direction: row;
         justify-content: center;
@@ -85,6 +85,7 @@
         align-items: center;
         width: 20%;
         height: auto;
+        margin-top:-5em;
     }
 
     .event-section h2 {
@@ -103,7 +104,7 @@
 
     .event-image {
         width: 100%;
-        height: 22em;
+        height: 28em;
         object-fit: cover;
     }
 
@@ -113,13 +114,12 @@
         bottom: 1em;
         width: 100%;
         text-align: center;
-        padding: 1em;
     }
 }
 
 @media only screen and (min-width: 768px) and (max-width: 1200px) {
     .event-section {
-        height: 55em;
+        height: 65em;
         display: flex;
         flex-direction: row;
         justify-content: center;
@@ -133,6 +133,7 @@
         align-items: center;
         width: 20%;
         height: auto;
+        margin-top:-5em;
     }
 
     .event-section h2 {
@@ -151,7 +152,7 @@
 
     .event-image {
         width: 100%;
-        height: 22em;
+        height: 28em;
         object-fit: cover;
     }
 
@@ -161,7 +162,6 @@
         bottom: 1em;
         width: 100%;
         text-align: center;
-        padding: 1em;
     }
 }
 
