changes to font

--- a/contact.css
+++ b/contact.css
@@ -68,7 +68,7 @@ label {
 .button-send {
     color: #f8f8f8;
     background-color: #D63D3D;
-    font-family: 'Afacad Flux', sans-serif;
+    font-family: 'Afacad Flux';
     font-size: 18px;
     border: none;
     border-radius: 2em;
