--- a/hero.css
+++ b/hero.css
@@ -132,12 +132,13 @@
 }
 
 @media only screen and (max-width: 600px) {
-    .hero-contact-us-button {
-        margin-top: -1em;
+    .hero-wrapper {
+        margin-left: -1em;
     }
+
     .hero-headings {
-        font-size: 3.5rem;
-        line-height: 3rem;
+        font-size: 4rem;
+        line-height: 3.5rem;
    }
 
     .hero-contact-us-button {
