--- a/footer.css
+++ b/footer.css
@@ -7,7 +7,7 @@ footer {
     z-index: 1;
     font-family: 'Afacad Flux', sans-serif;
     color: #f8f8f8;
-    font-size: 12px;
+    font-size: 0.875rem;
     font-weight: 100;
     width: 100%;
     height: 10em;
@@ -31,12 +31,12 @@ footer {
 @media only screen and (min-width: 1200px) {
 
     footer {
-        font-size: 16px;
+        font-size: 1rem;
     }
 
     .social-media {
         gap: 15px;
-        font-size: 30px;
+        font-size: 1.875rem;
     }
 
     .our-vision {
@@ -48,12 +48,12 @@ footer {
 @media only screen and (min-width: 768px) and (max-width: 1200px) {
 
     footer {
-        font-size: 16px;
+        font-size: 1rem;
     }
 
     .social-media {
         gap: 15px;
-        font-size: 30px;
+        font-size: 1.875rem;
     }
 
     .our-vision {
