--- a/news.css
+++ b/news.css
@@ -108,6 +108,9 @@
 }
 
 @media screen and (min-width: 1200px){
+    .news-section {
+        min-height: 65em;
+    }
     .nyhets-block {
         flex-direction: row;
         justify-content: center;
@@ -175,6 +178,6 @@
     .news-event-quote {
         font-size: 1.375rem;
         position: absolute;
-        bottom: 8rem;
+        bottom: 0;
     }
 }
