--- a/navbar.css
+++ b/navbar.css
@@ -151,3 +151,9 @@ h1 {
         width: 100%;
     }
 }
+
+@media only screen and (min-width: 1200px) {
+    header {
+        width: 79.8%;
+    }
+}
