--- a/navbar.css
+++ b/navbar.css
@@ -19,6 +19,10 @@ h1 {
     color: white;
 }
 
+.logo-link {
+    text-decoration: none;
+}
+
 .nav {
     position: relative;
 }
@@ -123,6 +127,7 @@ h1 {
         
     nav {
         width: 100%;
+        display: flex;
     }
 
     .navbar-links-desktop {
